--- a/restservice2/src/main/webapp/index.html
+++ b/restservice2/src/main/webapp/index.html
@@ -8,6 +8,7 @@
 <body>
  	<h1>The service is running!</h1>
  	
+ 	 <button id="refresh" type="button">REFRESH</button>
  	 <form id="personForm">
  	 	<label for="idPerson">Id:</label>
  		<input id="idPerson" type="text">
